[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Menu/Button_Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menu/ButtonLevel_Padrao.tscn" type="PackedScene" id=4]

[node name="LevelSelector" type="Node"]
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( -743.56, 41.3505 )
texture = ExtResource( 2 )
offset = Vector2( 1073.56, 298.65 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.247059, 0.321569, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 270.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.337255, 0.054902, 0.388235, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
text = "Choose a level"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 270.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Button1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 90.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" parent="VBoxContainer/HBoxContainer/Button1" index="0"]
text = "Level 01"

[node name="Button2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 90.0
margin_right = 180.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" parent="VBoxContainer/HBoxContainer/Button2" index="0"]
text = "Level 02"

[node name="Button3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 180.0
margin_right = 270.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" parent="VBoxContainer/HBoxContainer/Button3" index="0"]
text = "Level 03"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]

[editable path="VBoxContainer/HBoxContainer/Button1"]

[editable path="VBoxContainer/HBoxContainer/Button2"]

[editable path="VBoxContainer/HBoxContainer/Button3"]
